--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-SocketIO==5.3.6
 Flask-Migrate==4.0.5
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
+Flask-CORS==4.0.0
 psycopg2-binary==2.9.7
 pymongo==4.5.0
 python-dotenv==1.0.0
